<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aa"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textColor="#c5daf1"
        android:textSize="30sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/ps"
        android:id="@+id/button"
        android:textSize="20sp"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="@color/backgroundb1"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/tc"
        android:id="@+id/button2"
        android:textSize="20sp"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/backgroundb2"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/pt"
        android:id="@+id/button3"
        android:textSize="20sp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="44dp"
        android:background="@color/backgroundb3"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/map"
        android:id="@+id/button4"
        android:textSize="20sp"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/backgroundb4"/>
</RelativeLayout>
