<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/person"/>

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText2"
        android:hint="@string/name"
        android:background="@color/backgroundtext"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:hint="@string/age"
        android:layout_below="@+id/editText2"
        android:background="@color/backgroundtext"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText4"
        android:hint="@string/department"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText3"
        android:hint="@string/target"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText6"
        android:hint="@string/academy"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
