<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img"
        android:scaleType="matrix"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/person" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:hint="@string/name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/backgroundtext"/>

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText2"
        android:hint="@string/age"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText3"
        android:hint="@string/department"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText4"
        android:hint="@string/tier"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/AppTheme.EditText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/editText5"
        android:hint="@string/academy"
        android:background="@color/backgroundtext"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button6"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/save"
        android:layout_above="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image"
        android:background="@color/backgroundb1"
        android:id="@+id/button10"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"
        android:layout_alignTop="@+id/button6" />

</RelativeLayout>
