<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mononi.test.MainActivity"
    android:background="@drawable/backgroundmain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/academy"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textColor="#c5daf1"
        android:fontFamily="@android:string/ok"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/assistant"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:textColor="#c5daf1"
        android:fontFamily="@android:string/ok"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@color/id_backgrond"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText2"
        android:background="@color/pass_backgrond"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="40dp"
        android:background="@color/login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
